--- a/index.html
+++ b/index.html
@@ -146,11 +146,8 @@
         const CACHE_NAME = 'reels-cache-v1';
         let allReels = [];
         let currentIndex = 0;
-        let viewedReels = [];
-
-        // URL se reelId extract karna
-        const urlParams = new URLSearchParams(window.location.search);
-        const initialReelId = urlParams.get('reelId') || null;
+        let viewedReels = []; // Viewed reels ka array
+        let reelHistory = []; // Scroll up ke liye history
 
         function setAudioPersistence() {
             localStorage.setItem('audioEnabled', 'true');
@@ -194,11 +191,11 @@
         const verifyBadge = document.getElementById('verify-badge');
         const title = document.getElementById('title');
 
-        function getRandomReel(excludeIndex) {
-            let availableReels = allReels.filter((_, idx) => !viewedReels.includes(idx) && idx !== excludeIndex);
+        function getRandomReel() {
+            let availableReels = allReels.filter((_, idx) => !viewedReels.includes(idx));
             if (availableReels.length === 0) {
-                viewedReels = []; // Reset viewed reels if all are seen
-                availableReels = allReels.filter((_, idx) => idx !== excludeIndex);
+                viewedReels = []; // Reset agar saare dekh liye
+                availableReels = allReels;
             }
             const randomIdx = Math.floor(Math.random() * availableReels.length);
             return allReels.indexOf(availableReels[randomIdx]);
@@ -217,14 +214,10 @@
                 return;
             }
 
-            // Initial reel set karna
-            if (initialReelId) {
-                currentIndex = allReels.findIndex(reel => reel.reelId === initialReelId);
-                if (currentIndex === -1) currentIndex = getRandomReel(-1);
-            } else {
-                currentIndex = getRandomReel(-1);
-            }
+            // Initial random reel
+            currentIndex = getRandomReel();
             viewedReels.push(currentIndex);
+            reelHistory.push(currentIndex);
 
             function getProfileById(id) {
                 return profiles.find(profile => profile.id === id) || { 
@@ -300,14 +293,18 @@
                 const videoElement = await createVideoElement(reel, currentIndex);
                 container.appendChild(videoElement);
 
-                // Placeholder for next reel
+                // Placeholder for previous and next reels
+                if (reelHistory.length > 1) {
+                    const prevPlaceholder = document.createElement('div');
+                    prevPlaceholder.className = 'video-container';
+                    container.insertBefore(prevPlaceholder, videoElement);
+                }
                 const nextPlaceholder = document.createElement('div');
                 nextPlaceholder.className = 'video-container';
                 container.appendChild(nextPlaceholder);
             }
 
             function enableScrollPlayback() {
-                let currentVideo = null;
                 let lastScrollTop = 0;
 
                 container.addEventListener('scroll', () => {
@@ -316,14 +313,23 @@
                     lastScrollTop = scrollTop;
 
                     const videoContainers = document.querySelectorAll('.video-container');
-                    const currentContainer = videoContainers[0]; // First is current reel
-                    const nextContainer = videoContainers[1]; // Second is placeholder
+                    const prevContainer = videoContainers[0];
+                    const currentContainer = videoContainers[1];
+                    const nextContainer = videoContainers[2];
 
                     if (direction === 'down' && nextContainer && nextContainer.getBoundingClientRect().top <= window.innerHeight * 0.7) {
-                        // Scrolled to next placeholder
-                        currentIndex = getRandomReel(currentIndex);
+                        // Scroll niche: Naya random reel
+                        currentIndex = getRandomReel();
                         viewedReels.push(currentIndex);
+                        reelHistory.push(currentIndex);
                         loadCurrentReel();
+                    } else if (direction === 'up' && prevContainer && prevContainer.getBoundingClientRect().bottom >= window.innerHeight * 0.3) {
+                        // Scroll upar: Previous reel
+                        if (reelHistory.length > 1) {
+                            reelHistory.pop(); // Current ko remove
+                            currentIndex = reelHistory[reelHistory.length - 1];
+                            loadCurrentReel();
+                        }
                     }
                 });
 
@@ -341,9 +347,7 @@
                                 if (v !== video) v.pause();
                             });
 
-                            currentVideo = video;
                             video.muted = !isAudioEnabled;
-
                             const reel = allReels[index];
                             if (reel) {
                                 updateMetadata(reel);
@@ -351,7 +355,7 @@
                             }
 
                             video.play().catch(error => console.log("Play error:", error));
-                        } else if (video !== currentVideo) {
+                        } else {
                             video.pause();
                             if (loader) loader.style.display = 'none';
                         }
