--- a/index.html
+++ b/index.html
@@ -5,122 +5,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <title>Reel Of The Day</title>
     <style>
-        body, html {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            background-color: #000;
-            overflow: hidden;
-            -webkit-user-select: none;
-            user-select: none;
-            touch-action: manipulation;
+        /* Existing styles remain unchanged, adding new styles */
+        .progress-bar {
+            position: absolute;
+            top: 0;
+            left: 0;
+            height: 3px;
+            background: #fff;
+            width: 0;
+            transition: width 0.1s linear;
+            z-index: 11;
         }
 
-        #reels-container {
-            width: 100%;
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            overflow-y: auto;
-            scroll-snap-type: y mandatory;
-            -webkit-overflow-scrolling: touch;
-        }
-
-        .video-container {
-            position: relative;
-            width: 100%;
-            height: 100vh;
-            scroll-snap-align: start;
-            flex-shrink: 0;
-            background-color: #000;
-        }
-
-        video {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            display: block;
-            background-color: #000;
-        }
-
-        .video-loader {
+        .error-message {
             position: absolute;
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
-            width: 32px;
-            height: 32px;
-            border: 3px solid #fff;
-            border-top: 3px solid transparent;
-            border-radius: 50%;
-            animation: spin 0.8s linear infinite;
-            z-index: 10;
+            color: white;
+            background: rgba(0, 0, 0, 0.8);
+            padding: 10px 20px;
+            border-radius: 5px;
             display: none;
-        }
-
-        @keyframes spin {
-            0% { transform: translate(-50%, -50%) rotate(0deg); }
-            100% { transform: translate(-50%, -50%) rotate(360deg); }
-        }
-
-        .fixed-overlay {
-            position: fixed;
-            bottom: 80px;
-            left: 15px;
-            width: calc(100% - 30px);
-            display: flex;
-            align-items: center;
-            padding: 10px;
-            background: transparent;
-        }
-
-        .profile-pic {
-            width: 45px;
-            height: 45px;
-            object-fit: cover;
-            border-radius: 50%;
-            border: 2px solid white;
-        }
-
-        .user-info {
-            margin-left: 10px;
-            color: white;
-        }
-
-        .username {
-            font-size: 16px;
-            font-weight: bold;
-            display: flex;
-            align-items: center;
-        }
-
-        .verify-badge {
-            width: 16px;
-            height: 16px;
-            margin-left: 5px;
-        }
-
-        .title {
-            font-size: 14px;
-            opacity: 0.9;
-            position: fixed;
-            bottom: 40px;
-            left: 15px;
-            width: calc(100% - 30px);
-            color: white;
-            padding: 5px 10px;
-            background: transparent;
-            border-radius: 8px;
-            white-space: normal;
-            cursor: pointer;
-        }
-
-        .like-animation {
-            position: absolute;
-            width: 120px;
-            height: 120px;
-            opacity: 0;
-            transition: opacity 0.9s ease-in-out;
         }
     </style>
 </head>
@@ -147,8 +53,9 @@
         let allReels = [];
         let currentIndex = 0;
         let viewedReels = [];
+        let touchStartY = 0;
+        let touchEndY = 0;
 
-        // URL se reelId extract karna
         const urlParams = new URLSearchParams(window.location.search);
         const initialReelId = urlParams.get('reelId') || null;
 
@@ -197,7 +104,7 @@
         function getRandomReel(excludeIndex) {
             let availableReels = allReels.filter((_, idx) => !viewedReels.includes(idx) && idx !== excludeIndex);
             if (availableReels.length === 0) {
-                viewedReels = []; // Reset viewed reels if all are seen
+                viewedReels = [];
                 availableReels = allReels.filter((_, idx) => idx !== excludeIndex);
             }
             const randomIdx = Math.floor(Math.random() * availableReels.length);
@@ -205,19 +112,18 @@
         }
 
         Promise.all([
-            fetch('profiles.json').then(res => res.ok ? res.json() : ({ profiles: [] })).catch(() => ({ profiles: [] })),
-            fetch('reels.json').then(res => res.ok ? res.json() : ({ reels: [] })).catch(() => ({ reels: [] }))
+            fetch('profiles.json').then(res => res.ok ? res.json() : Promise.reject('Profiles not found')).catch(() => ({ profiles: [] })),
+            fetch('reels.json').then(res => res.ok ? res.json() : Promise.reject('Reels not found')).catch(() => ({ reels: [] }))
         ])
         .then(([profilesData, reelsData]) => {
             const profiles = profilesData.profiles || [];
             allReels = reelsData.reels || [];
 
             if (allReels.length === 0) {
-                container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">No reels available.</div>';
+                showError('No reels available');
                 return;
             }
 
-            // Initial reel set karna
             if (initialReelId) {
                 currentIndex = allReels.findIndex(reel => reel.reelId === initialReelId);
                 if (currentIndex === -1) currentIndex = getRandomReel(-1);
@@ -234,7 +140,7 @@
                 };
             }
 
-            async function createVideoElement(reel, index) {
+            async function createVideoElement(reel, index, isPreload = false) {
                 const div = document.createElement('div');
                 div.className = 'video-container';
 
@@ -242,7 +148,7 @@
                 video.playsInline = true;
                 video.controls = false;
                 video.muted = !isAudioEnabled;
-                video.loop = true;
+                video.loop = !isPreload;
                 video.dataset.index = index;
                 video.dataset.title = reel.title;
 
@@ -251,19 +157,35 @@
 
                 const loader = document.createElement('div');
                 loader.className = 'video-loader';
-                loader.style.display = 'block'; // Initially visible
+                loader.style.display = 'block';
                 div.appendChild(loader);
+
+                const progressBar = document.createElement('div');
+                progressBar.className = 'progress-bar';
+                div.appendChild(progressBar);
+
+                const errorMessage = document.createElement('div');
+                errorMessage.className = 'error-message';
+                div.appendChild(errorMessage);
 
                 video.addEventListener('canplay', () => {
                     loader.style.display = 'none';
-                    video.play().catch(error => console.log("Play error:", error));
-                    updateMetadata(reel);
+                    if (!isPreload) {
+                        video.play().catch(error => console.log("Play error:", error));
+                        updateMetadata(reel);
+                    }
+                });
+
+                video.addEventListener('timeupdate', () => {
+                    if (!isPreload) {
+                        const progress = (video.currentTime / video.duration) * 100;
+                        progressBar.style.width = `${progress}%`;
+                    }
                 });
 
                 video.addEventListener('error', () => {
-                    loader.style.display = 'block';
-                    loader.innerHTML = 'Load failed';
-                    setTimeout(() => loader.style.display = 'none', 2000);
+                    loader.style.display = 'none';
+                    showError('Failed to load video', div);
                 });
 
                 video.addEventListener('click', () => {
@@ -276,7 +198,7 @@
                 });
 
                 video.addEventListener('dblclick', (e) => {
-                    showLikeAnimation(div, e);
+                    if (!isPreload) showLikeAnimation(div, e);
                 });
 
                 div.appendChild(video);
@@ -295,20 +217,43 @@
             }
 
             async function loadCurrentReel() {
-                container.innerHTML = ''; // Clear previous content
+                container.innerHTML = '';
                 const reel = allReels[currentIndex];
                 const videoElement = await createVideoElement(reel, currentIndex);
                 container.appendChild(videoElement);
 
-                // Placeholder for next reel
-                const nextPlaceholder = document.createElement('div');
-                nextPlaceholder.className = 'video-container';
-                container.appendChild(nextPlaceholder);
+                // Preload next reel
+                const nextIndex = getRandomReel(currentIndex);
+                const nextReel = allReels[nextIndex];
+                const nextVideoElement = await createVideoElement(nextReel, nextIndex, true);
+                container.appendChild(nextVideoElement);
             }
 
             function enableScrollPlayback() {
                 let currentVideo = null;
                 let lastScrollTop = 0;
+
+                // Swipe gesture support
+                container.addEventListener('touchstart', (e) => {
+                    touchStartY = e.touches[0].clientY;
+                });
+
+                container.addEventListener('touchend', (e) => {
+                    touchEndY = e.changedTouches[0].clientY;
+                    handleSwipe();
+                });
+
+                function handleSwipe() {
+                    const swipeDistance = touchStartY - touchEndY;
+                    if (Math.abs(swipeDistance) > 50) { // Minimum swipe distance
+                        if (swipeDistance > 0) {
+                            // Swipe up - next reel
+                            currentIndex = getRandomReel(currentIndex);
+                            viewedReels.push(currentIndex);
+                            loadCurrentReel();
+                        }
+                    }
+                }
 
                 container.addEventListener('scroll', () => {
                     const scrollTop = container.scrollTop;
@@ -316,11 +261,12 @@
                     lastScrollTop = scrollTop;
 
                     const videoContainers = document.querySelectorAll('.video-container');
-                    const currentContainer = videoContainers[0]; // First is current reel
-                    const nextContainer = videoContainers[1]; // Second is placeholder
+                    if (videoContainers.length < 2) return;
+
+                    const currentContainer = videoContainers[0];
+                    const nextContainer = videoContainers[1];
 
                     if (direction === 'down' && nextContainer && nextContainer.getBoundingClientRect().top <= window.innerHeight * 0.7) {
-                        // Scrolled to next placeholder
                         currentIndex = getRandomReel(currentIndex);
                         viewedReels.push(currentIndex);
                         loadCurrentReel();
@@ -331,6 +277,7 @@
                     entries.forEach(entry => {
                         const video = entry.target.querySelector('video');
                         const loader = entry.target.querySelector('.video-loader');
+                        const progressBar = entry.target.querySelector('.progress-bar');
 
                         if (!video) return;
 
@@ -351,9 +298,11 @@
                             }
 
                             video.play().catch(error => console.log("Play error:", error));
+                            progressBar.style.display = 'block';
                         } else if (video !== currentVideo) {
                             video.pause();
                             if (loader) loader.style.display = 'none';
+                            progressBar.style.display = 'none';
                         }
                     });
                 }, { threshold: 0.7 });
@@ -381,12 +330,24 @@
                 }, 500);
             }
 
-            // Initial load
+            function showError(message, container = null) {
+                const target = container || document.body;
+                const errorDiv = target.querySelector('.error-message') || document.createElement('div');
+                errorDiv.className = 'error-message';
+                errorDiv.textContent = message;
+                errorDiv.style.display = 'block';
+                if (!container) target.appendChild(errorDiv);
+                setTimeout(() => {
+                    errorDiv.style.display = 'none';
+                    if (!container) target.removeChild(errorDiv);
+                }, 3000);
+            }
+
             loadCurrentReel().then(() => enableScrollPlayback());
         })
         .catch(error => {
             console.error('Error loading data:', error);
-            container.innerHTML = '<div style="color: white; text-align: center; padding-top: 50%;">Failed to load reels.</div>';
+            showError('Failed to load reels');
         });
     </script>
 </body>
